--- a/projects/landing-page/index.html
+++ b/projects/landing-page/index.html
@@ -30,7 +30,7 @@
     The first section is set to active class by default -->
       <section id="section1" data-nav="Section 1" class="active">
         <div class="landing__container">
-          <h2>Section 1</h2>
+          <h2 data-parent="section">Section 1</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti.
             Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed convallis
@@ -49,7 +49,7 @@
       </section>
       <section id="section2" data-nav="Section 2">
         <div class="landing__container">
-          <h2>Section 2</h2>
+          <h2 data-parent="section">Section 2</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti.
             Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed convallis
@@ -68,7 +68,7 @@
       </section>
       <section id="section3" data-nav="Section 3">
         <div class="landing__container">
-          <h2>Section 3</h2>
+          <h2 data-parent="section">Section 3</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti.
             Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed convallis
@@ -87,7 +87,7 @@
       </section>
       <section id="section4" data-nav="Section 4">
         <div class="landing__container">
-          <h2>Section 4</h2>
+          <h2 data-parent="section">Section 4</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti.
             Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed convallis
